# ash-ext-shader-objects

./: Cargo.toml  GOAL.md
shader/: comp.hlsl  frag.hlsl  global.glsl  main.comp  main.frag  main.vert  vert.hlsl
src/: buffer.rs  camera_controller.rs  command.rs  ctx.rs  graph.rs  main.rs
src/bevy_runner/: config.rs  mod.rs  system.rs  vulkan_windows.rs
src/game/: camera_controller.rs
src/passes/: comp.rs  egui.rs  mod.rs
src/render/: bundles.rs  extract.rs  global_descriptors.rs  gltf.rs  image.rs  material.rs  mesh.rs  mod.rs  pipeline.rs  primitives.rs  shaders.rs
src/render/nodes/: mod.rs
