[package]
name = "someday"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { git = "https://github.com/ash-rs/ash.git", features = ["linked"] }
ash-window = { git = "https://github.com/ash-rs/ash.git" }
bytemuck = { version = "1.13.1", features = ["derive"] }
egui = "0.22.0"
egui-winit = "0.22.0"
gpu-allocator = { path = "../gpu-allocator", features = ["vulkan", "ash"] }
raw-window-handle = "0.5.2"
rspirv-reflect = "0.8.0"
shaderc = "0.8.2"
winit = "0.28.6"


