[package]
name = "someday"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
approx = "0.5.1"
arrayvec = "0.7.4"
ash = { git = "https://github.com/ash-rs/ash.git", features = ["linked"] }
ash-window = { git = "https://github.com/ash-rs/ash.git" }
base64 = "0.21.2"
bytemuck = { version = "1.13.1", features = ["derive"] }
crossbeam-channel = "0.5.8"
crossbeam-queue = "0.3.8"
egui = "0.22.0"
egui-winit = "0.22.0"
gltf = { version = "1.2.0", default-features = false, features = [
    "KHR_lights_punctual",
    "KHR_materials_unlit",
    "extras",
    "names",
    "utils",
] }
gpu-allocator = { path = "../gpu-allocator", features = ["vulkan", "ash"] }
image = { version = "0.24", features = ["png", "jpeg"], default-features = false }
inline-spirv = "0.1.6"
once_cell = "1.18.0"
percent-encoding = "2.3.0"
raw-window-handle = "0.5.2"
rayon = "1.7.0"
rspirv-reflect = "0.8.0"
shaderc = "0.8.2"
thiserror = "1.0.40"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
tracing-tracy = { version = "0.10", optional = true }

[features]
tracing = ["tracing-tracy", "tracing-subscriber"]


[dependencies.bevy]
default-features = false
features = ["bevy_asset", "bevy_winit"]
version = "0.10"
